--- a/es/es01.md
+++ b/es/es01.md
@@ -1,6 +1,6 @@
 # 暗号とセキュリティの理論
 
-最終更新 2022/09/14 Shigeichiro Yamasaki
+最終更新 2022/09/21 Shigeichiro Yamasaki
 
 ### シーザ暗号
 
@@ -159,32 +159,34 @@ pythonではBASE64エンコーディングにします．
 python版 (python3.3以降）
 
 ```python
-# BASE64 エンコーディングを利用
-import base64
 import random
+import struct
 
 m = "これは平文の message です"
 
+
 # 数値にエンコード
 def encode(m):
-    code = base64.b64encode(m.encode())
+    code = m.encode('utf-8')
     return (int.from_bytes(code,'little'),len(code))
+
+
 
 >>> num,l =encode(m)
 >>> num
-3235199842280327765224261484107541982483167718442127528151054142879834361564138973780045833349466209858612
+17774940241153716208430814457640303922355929000704022135800248402637675673387491
 >>> l
-44
+33
 
 # メッセージと同じサイズのランダム文字列の生成
 def genkey(m):
     num,l = encode(m)
-    return random.randrange(num)
+    return random.randrange(num*10)
 
 # 暗号鍵の生成
->>> key = genkey(num)
+>>> key = genkey(m)
 >>> key
-857448620764902181144852004166265761725484473188686380327057048957583363966721733655412153354448233643925
+125353287426688236530077277437618599893869491408183711348133320360848470878501218
 
 # バーナム暗号で暗号化
 def encVernam(m,key):
@@ -212,66 +214,6 @@ def decVernam(c,l,key):
 'これは平文の message です'
 
 ```
-
-
---
-Ruby
-
-```ruby
-# メッセージの文字列のビットベクトル（数値）変換
-m = "これは平文の message です"
-numbers = m.unpack("U*")
-=> [12371, 12428, 12399, 24179, 25991, 12398, 32, 109, 101, 115, 115, 97, 103, 101, 32, 12391, 12377]
-
-# BER エンコード（ISO/IEC 8825-1:1995 : Basic Encoding Rules(BER) による整数の符号化）
-ber = numbers.pack("w*")
-=> "\xE0S\xE1\f\xE0o\x81\xBCs\x81\xCB\a\xE0n message \xE0g\xE0Y"
-
-# BER デコード
-dnumbers = ber.unpack("w*")
-=> [12371, 12428, 12399, 24179, 25991, 12398, 32, 109, 101, 115, 115, 97, 103, 101, 32, 12391, 12377]
-
-# 数値の配列化されたメッセージの文字列への復元
-decode = dnumbers.pack("U*")
-=> "これは平文の message です"
-```
-
-#### 排他的論理和
-
-排他的論理和による暗号化と復号化（ワンタイムパッド）
-
-```ruby
-require 'securerandom'
-
-# 暗号化
-def encrypt(message,key)
-  m=message.unpack("U*")            # 文字列の数値列変換
-  k=key.unpack("U*")                # 暗号鍵の数値列変換
-  numbers =m.zip(k).map{|a,b|a^b}   # 数値とごに排他的論理和を実施
-  return numbers.pack("w*")         # 数値の配列をBERエンコード
-end
-
-# 復号化
-def decrypt(ber,key)
-  c = ber.unpack("w*")
-  k=key.unpack("U*")                # 暗号鍵のビットベクトル変換
-  c.zip(k).map{|a,b|a^b}.pack("U*") # 数値とごに排他的論理和を実施
-end
-
-# 暗号化
-m = "これは平文の message です"
-# 暗号鍵生成（メセージと同じサイズのランダムな文字列を毎回生成）
-key = (1..m.size).map{("!".."z").to_a[SecureRandom.random_number(90)]}.join
-=> "-bow+8S@7TSA'K)@X"
-# 暗号化
-ber = encrypt(m,key)
-=> "\xE0\r\xE16\xE0.\x81\xBCO\x81\xCBl\xE03|*M\"\x17>\x16Ug\xE0R\xE0\x1E"
-
-# 復号化（暗号鍵が必要）
-decrypt(ber,key)
-=> "これは平文の message です"
-```
-
 
 ## ユークリッドの互除法
 
