--- a/bitcoin/5.bitcoinrb-P2WSH.md
+++ b/bitcoin/5.bitcoinrb-P2WSH.md
@@ -1,6 +1,6 @@
 # 5. bitcoinrbでP2WSHを実装
 
-2022/05/09更新 Shigeichiro Yamasaki
+2022/11/10 更新 Shigeichiro Yamasaki
 
 bitcoinでスマートコントラクトを記述するときの基本は P2WSH です
 
@@ -148,8 +148,14 @@ pubkeys = [pub_alice, pub_bob, pub_carol]
 # 送金
 tx, locked_txid, redeem_script = send_multisig(amount,m,pubkeys)
 
+################################
+# アンロックする主体に渡す情報を代入文の文字列にする
+
 # P2WSH でロックされたトランザクションのtxid
-locked_txid
+"locked_txid = '#{locked_txid}'"
+
+# redeem script の16進数形式
+"redeem_script_hex = '#{redeem_script.to_hex}'"
 ```
 
 ## P2WSH タイプのUTXOの使用（アンロック）
@@ -161,7 +167,36 @@ locked_txid
 * m of n マルチシグにおける m 人以上の署名鍵が必要
 
 ```ruby
-# P2WSH のUTXOの使用
+require 'bitcoin'
+require 'net/http'
+require 'json'
+include Bitcoin
+include Bitcoin::Opcodes
+Bitcoin.chain_params = :signet
+
+HOST="localhost"
+PORT=38332          # mainnetの場合は 8332
+RPCUSER="hoge"      # bitcoin core RPCユーザ名
+RPCPASSWORD="hoge"  # bitcoin core パスワード
+FEE = 0.00002       # 手数料
+
+# bitcoin core RPC を利用するメソッド
+def bitcoinRPC(method, params)
+    http = Net::HTTP.new(HOST, PORT)
+    request = Net::HTTP::Post.new('/')
+    request.basic_auth(RPCUSER, RPCPASSWORD)
+    request.content_type = 'application/json'
+    request.body = { method: method, params: params, id: 'jsonrpc' }.to_json
+    JSON.parse(http.request(request).body)["result"]
+end
+
+#################################
+#  アンロックする主体に渡す情報を代入文の文字列にしたもの
+# P2WSH でロックされたトランザクションのtxid
+locked_txid 
+
+# redeem script の16進数形式
+redeem_script_hex
 
 # テスト用の秘密鍵（WIF形式）
 priv_alice = "cTzEHTNYQQ2PGLJWFkXdpxHm3B8kuU7yN3c5b5ZkSWzUY6j3ZW5B"
@@ -175,41 +210,51 @@ keyBob   = Bitcoin::Key.from_wif(priv_bob)
 keyCarol = Bitcoin::Key.from_wif(priv_carol)
 keyDavid = Bitcoin::Key.from_wif(priv_david)
 
-# P2WSH でロックされたトランザクションのtxid
-locked_txid
+## アドレス
+alice = keyAlice.to_p2wpkh
+bob   = keyBob.to_p2wpkh
+carol = keyCarol.to_p2wpkh
+david = keyDavid.to_p2wpkh
 
-# redeem script の16進形式
-redeem_script_hex = "52210307f83f230d23c2f706f4108ecf6b8330b57369c0529b735e38f9c69fb9d826bf21034d18816344093cbe309beaf4fb1e86c1057c391ea7c85e1c050cb67f0d4d7e2a210260ba91b61f1a47a35f72b4a62880da13c101a2cf2fcd8e7a83fff4e3a0bda5b153ae"
-# redeem script の復元
-redeem_script = Bitcoin::Script.parse_from_payload(redeem_script_hex.htb)
+#####################################################
 
-# アンロック対象トランザクションとUTXO
-locked_tx = Bitcoin::Tx.parse_from_payload(bitcoinRPC('getrawtransaction',[p2wsh_txid]).htb)
-p2wsh_utxo = locked_tx.out
-utxo_vout = 0
-utxo_value = p2wsh_utxo[utxo_vout].value    # satoshi
+# アンロックした資金は addr に送金するものとする
+# 二人の署名鍵によるアンロック（key1, key2)
 
-# アンロックトランザクションの構成（送金先はaliceとする）
-p2wsh_tx = Bitcoin::Tx.new
-# input
-outpoint = Bitcoin::OutPoint.from_txid(p2wsh_txid, utxo_vout)
-p2wsh_tx.in <<  Bitcoin::TxIn.new(out_point: outpoint)
-#output (P2WPKH)
-script_pubkey = Bitcoin::Script.parse_from_addr(alice)
-p2wsh_tx.out << Bitcoin::TxOut.new(value: utxo_value-(FEE*(10**8)).to_i, script_pubkey: script_pubkey)
+def unlock_p2wsh_tx(locked_txid, redeem_script_hex, addr, key1, key2)
+    # redeem script の復元
+    redeem_script = Bitcoin::Script.parse_from_payload(redeem_script_hex.htb)
+    # アンロック対象トランザクションとUTXOを確定する
+    locked_tx = Bitcoin::Tx.parse_from_payload(bitcoinRPC('getrawtransaction',[locked_txid]).htb)
+    p2wsh_utxo = locked_tx.out
+    utxo_vout = 0
+    utxo_value = p2wsh_utxo[utxo_vout].value    # この金額の単位は satoshi
+    # アンロックトランザクションの構成（送金先はaliceとする）
+    p2wsh_tx = Bitcoin::Tx.new
+    # inputの構成
+    outpoint = Bitcoin::OutPoint.from_txid(locked_txid, utxo_vout)
+    p2wsh_tx.in <<  Bitcoin::TxIn.new(out_point: outpoint)
+    #output の構成 (P2WPKH) アドレスへ送金
+    script_pubkey = Bitcoin::Script.parse_from_addr(addr)
+    p2wsh_tx.out << Bitcoin::TxOut.new(value: utxo_value-(FEE*(10**8)).to_i, script_pubkey: script_pubkey)
+    # アンロックトランザクションの署名対象のハッシュ値 sighash
+    sighash = p2wsh_tx.sighash_for_input(0, redeem_script, sig_version: :witness_v0, amount: utxo_value, hash_type: Bitcoin::SIGHASH_TYPE[:all])
+    # aliceとbobのsighashへの署名
+    sig1 = key1.sign(sighash) + [Bitcoin::SIGHASH_TYPE[:all]].pack('C')
+    sig2 = key2.sign(sighash) + [Bitcoin::SIGHASH_TYPE[:all]].pack('C')
+    # witness scriptの追加
+    p2wsh_tx.in[0].script_witness.stack << ""   # CHECKMULTISIGのバグ対応　NULLDUMMY　を入れる
+    p2wsh_tx.in[0].script_witness.stack << sig1
+    p2wsh_tx.in[0].script_witness.stack << sig2
+    p2wsh_tx.in[0].script_witness.stack << redeem_script.to_payload
+    # 署名したトランザクションをブロードキャストする
+    p2wsh_txid = bitcoinRPC('sendrawtransaction', [p2wsh_tx.to_hex])
+    return p2wsh_txid
+end
 
-# アンロックトランザクションの署名対象のハッシュ値 sighash
-sighash = p2wsh_tx.sighash_for_input(0, redeem_script, sig_version: :witness_v0, amount: utxo_value, hash_type: Bitcoin::SIGHASH_TYPE[:all])
-# aliceとbobのsighasuへの署名
-sigAlice = keyAlice.sign(sighash) + [Bitcoin::SIGHASH_TYPE[:all]].pack('C')
-sigBob   = keyBob.sign(sighash) + [Bitcoin::SIGHASH_TYPE[:all]].pack('C')
-# witness scriptの追加
-p2wsh_tx.in[0].script_witness.stack << ""   # CHECKMULTISIGのバグ対応　NULLDUMMY　を入れる
-p2wsh_tx.in[0].script_witness.stack << sigAlice
-p2wsh_tx.in[0].script_witness.stack << sigBob
-p2wsh_tx.in[0].script_witness.stack << redeem_script.to_payload
-# 署名したトランザクションをブロードキャストする
-p2wsh_txid = bitcoinRPC('sendrawtransaction', [p2wsh_tx.to_hex])
+# Alice と Bobの秘密鍵によるアンロック
+# アンロックした資金は Aliceのアドレスに送金する
 
+p2wsh_txid = unlock_p2wsh_tx(locked_txid, redeem_script_hex, alice, keyAlice, keyBob)
 ```
 
