--- a/bitcoin/5.bitcoinrb-P2WSH.md
+++ b/bitcoin/5.bitcoinrb-P2WSH.md
@@ -9,20 +9,21 @@ P2WSHの代表例はマルチシグなので、ここではその説明をしま
 
 ## P2WSHマルチシグの例
 
+### 共通環境
+
 ```ruby
+#  共通部分
 require 'bitcoin'
 require 'net/http'
 require 'json'
 include Bitcoin
 include Bitcoin::Opcodes
 Bitcoin.chain_params = :signet
-
 HOST="localhost"
 PORT=38332          # mainnetの場合は 8332
 RPCUSER="hoge"      # bitcoin core RPCユーザ名
 RPCPASSWORD="hoge"  # bitcoin core パスワード
 FEE = 0.00002       # 手数料
-
 # bitcoin core RPC を利用するメソッド
 def bitcoinRPC(method, params)
     http = Net::HTTP.new(HOST, PORT)
@@ -32,12 +33,61 @@ def bitcoinRPC(method, params)
     request.body = { method: method, params: params, id: 'jsonrpc' }.to_json
     JSON.parse(http.request(request).body)["result"]
 end
+# トランザクションのinputの構成
+def make_inputs(tx, utxos)
+    utxos.each{|utxo|
+        outpoint = Bitcoin::OutPoint.from_txid(utxo["txid"], utxo["vout"])
+        tx.in << Bitcoin::TxIn.new(out_point: outpoint)
+    }
+    return tx
+end
+# 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
+def consuming_utxos(amount)
+    # ワレットの未使用のUTXOの一覧を得る
+    unspent = bitcoinRPC('listunspent', [])
+    # 消費可能状態のUTXOの選定
+    spendable_utxos = unspent.select{|t|t["spendable"]==true}
+    # UTXOを金額で昇順にソートする
+    sorted_utxos = spendable_utxos.sort_by{|x|x["amount"]}
+    # 少額のUTXOから集めて，指定金額を上回るぎりぎりのUTXOのリストを作成する
+    utxos=[]
+    begin
+        utxos << sorted_utxos.shift
+        balance = utxos.reduce(0){|s,t|s+=t["amount"]}
+    end until balance >= amount
+    return utxos
+end
+#######################################################
+# テスト用アカウントと鍵
+# テスト用の秘密鍵（WIF形式）
+priv_alice = "cTzEHTNYQQ2PGLJWFkXdpxHm3B8kuU7yN3c5b5ZkSWzUY6j3ZW5B"
+priv_bob   = "cUTymPpf51Y1Q8hddD93kSqVahkdFQJXWCuMgY8ctHJqbermrXPK"
+priv_carol = "cRaww9WmBUogesd6vEBBi4A24yZdxSMQT75FJ9ZQTqWtpRJSTG2f"
+priv_david = "cSHFCDprZSsp423BG8brHReK7FG4CNifJYZvgcZ6N6QchcxEgyDp"
+# 鍵オブジェクトの復元(WIF形式の秘密鍵から生成）
+keyAlice = Bitcoin::Key.from_wif(priv_alice)
+keyBob   = Bitcoin::Key.from_wif(priv_bob)
+keyCarol = Bitcoin::Key.from_wif(priv_carol)
+keyDavid = Bitcoin::Key.from_wif(priv_david)
+## アドレス
+alice = keyAlice.to_p2wpkh
+bob   = keyBob.to_p2wpkh
+carol = keyCarol.to_p2wpkh
+david = keyDavid.to_p2wpkh
+# 公開鍵
+pub_alice = keyAlice.pubkey
+pub_bob   = keyBob.pubkey
+pub_carol = keyCarol.pubkey
+pub_david = keyDavid.pubkey
+```
 
+### m of n マルチシグトランザクションのP2WSH送金 
+
+```ruby
 ###  m of n マルチシグトランザクションのP2WSH送金 
 #    mはアンロックに必要な公開鍵の数
 #    amount は、P2WSH で送金する金額
 #    pubkeys は、n個の公開鍵の配列
-
 def send_multisig(amount, m, pubkeys)
     # redeem scriptの生成
     redeem_script = Bitcoin::Script.to_multisig_script(m,pubkeys)
@@ -50,7 +100,6 @@ def send_multisig(amount, m, pubkeys)
     # P2WSHトランザクションのアンロックに必要な情報の出力
     return tx, txid, redeem_script
 end
-
 # P2WSHトランザクションの構成
 def p2wsh_tx(amount, redeem_script)
     balance = bitcoinRPC('getbalance', [])
@@ -71,17 +120,7 @@ def p2wsh_tx(amount, redeem_script)
         return tx,utxos
     end
 end
-
-# トランザクションのinputの構成
-def make_inputs(tx, utxos)
-    utxos.each{|utxo|
-        outpoint = Bitcoin::OutPoint.from_txid(utxo["txid"], utxo["vout"])
-        tx.in << Bitcoin::TxIn.new(out_point: outpoint)
-    }
-    return tx
-end
-
-# トランザクションのoutputの構成
+# p2wshトランザクションのoutputの構成
 def make_outputs(tx, amount, redeem_script, change, change_addr)
     change_satoshi = (change*(10**8)).to_i
     amount_satoshi = (amount*(10**8)).to_i
@@ -94,7 +133,65 @@ def make_outputs(tx, amount, redeem_script, change, change_addr)
     tx.out << Bitcoin::TxOut.new(value: change_satoshi, script_pubkey: scriptPubKey1)
     return tx
 end
+```
 
+#### 送金のテスト
+
+```ruby
+# 送金金額、署名閾値、公開鍵リスト
+amount = 0.001
+m = 2
+pubkeys = [pub_alice, pub_bob, pub_carol]
+# 送金
+tx, locked_txid, redeem_script = send_multisig(amount,m,pubkeys)
+################################
+# アンロックする主体に渡す情報を代入文の文字列にする
+# P2WSH でロックされたトランザクションのtxid
+"locked_txid = '#{locked_txid}'"
+# redeem script の16進数形式
+"redeem_script_hex = '#{redeem_script.to_hex}'"
+```
+
+## P2WSH タイプのUTXOの使用（アンロック）
+
+
+### アンロックに必要な情報
+
+* 送金者から、送金したP2WSHトランザクションID (locked_txid) と redeem scriptを入手する必要がある
+* m of n マルチシグにおける m 人以上の署名鍵が必要
+
+### 共通環境
+
+```ruby
+#  共通部分
+require 'bitcoin'
+require 'net/http'
+require 'json'
+include Bitcoin
+include Bitcoin::Opcodes
+Bitcoin.chain_params = :signet
+HOST="localhost"
+PORT=38332          # mainnetの場合は 8332
+RPCUSER="hoge"      # bitcoin core RPCユーザ名
+RPCPASSWORD="hoge"  # bitcoin core パスワード
+FEE = 0.00002       # 手数料
+# bitcoin core RPC を利用するメソッド
+def bitcoinRPC(method, params)
+    http = Net::HTTP.new(HOST, PORT)
+    request = Net::HTTP::Post.new('/')
+    request.basic_auth(RPCUSER, RPCPASSWORD)
+    request.content_type = 'application/json'
+    request.body = { method: method, params: params, id: 'jsonrpc' }.to_json
+    JSON.parse(http.request(request).body)["result"]
+end
+# トランザクションのinputの構成
+def make_inputs(tx, utxos)
+    utxos.each{|utxo|
+        outpoint = Bitcoin::OutPoint.from_txid(utxo["txid"], utxo["vout"])
+        tx.in << Bitcoin::TxIn.new(out_point: outpoint)
+    }
+    return tx
+end
 # 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
 def consuming_utxos(amount)
     # ワレットの未使用のUTXOの一覧を得る
@@ -111,116 +208,40 @@ def consuming_utxos(amount)
     end until balance >= amount
     return utxos
 end
-```
-
-#### 送金のテスト
-
-```ruby
+#######################################################
+# テスト用アカウントと鍵
 # テスト用の秘密鍵（WIF形式）
 priv_alice = "cTzEHTNYQQ2PGLJWFkXdpxHm3B8kuU7yN3c5b5ZkSWzUY6j3ZW5B"
 priv_bob   = "cUTymPpf51Y1Q8hddD93kSqVahkdFQJXWCuMgY8ctHJqbermrXPK"
 priv_carol = "cRaww9WmBUogesd6vEBBi4A24yZdxSMQT75FJ9ZQTqWtpRJSTG2f"
 priv_david = "cSHFCDprZSsp423BG8brHReK7FG4CNifJYZvgcZ6N6QchcxEgyDp"
-
 # 鍵オブジェクトの復元(WIF形式の秘密鍵から生成）
 keyAlice = Bitcoin::Key.from_wif(priv_alice)
 keyBob   = Bitcoin::Key.from_wif(priv_bob)
 keyCarol = Bitcoin::Key.from_wif(priv_carol)
 keyDavid = Bitcoin::Key.from_wif(priv_david)
-
 ## アドレス
 alice = keyAlice.to_p2wpkh
 bob   = keyBob.to_p2wpkh
 carol = keyCarol.to_p2wpkh
 david = keyDavid.to_p2wpkh
-
 # 公開鍵
 pub_alice = keyAlice.pubkey
 pub_bob   = keyBob.pubkey
 pub_carol = keyCarol.pubkey
 pub_david = keyDavid.pubkey
-
-# 送金金額、署名閾値、公開鍵リスト
-amount = 0.001
-m = 2
-pubkeys = [pub_alice, pub_bob, pub_carol]
-
-# 送金
-tx, locked_txid, redeem_script = send_multisig(amount,m,pubkeys)
-
-################################
-# アンロックする主体に渡す情報を代入文の文字列にする
-
-# P2WSH でロックされたトランザクションのtxid
-"locked_txid = '#{locked_txid}'"
-
-# redeem script の16進数形式
-"redeem_script_hex = '#{redeem_script.to_hex}'"
 ```
 
-## P2WSH タイプのUTXOの使用（アンロック）
-
-
-### アンロックに必要な情報
-
-* 送金者から、送金したP2WSHトランザクションID (locked_txid) と redeem scriptを入手する必要がある
-* m of n マルチシグにおける m 人以上の署名鍵が必要
+### アンロックする主体の処理
 
 ```ruby
-require 'bitcoin'
-require 'net/http'
-require 'json'
-include Bitcoin
-include Bitcoin::Opcodes
-Bitcoin.chain_params = :signet
-
-HOST="localhost"
-PORT=38332          # mainnetの場合は 8332
-RPCUSER="hoge"      # bitcoin core RPCユーザ名
-RPCPASSWORD="hoge"  # bitcoin core パスワード
-FEE = 0.00002       # 手数料
-
-# bitcoin core RPC を利用するメソッド
-def bitcoinRPC(method, params)
-    http = Net::HTTP.new(HOST, PORT)
-    request = Net::HTTP::Post.new('/')
-    request.basic_auth(RPCUSER, RPCPASSWORD)
-    request.content_type = 'application/json'
-    request.body = { method: method, params: params, id: 'jsonrpc' }.to_json
-    JSON.parse(http.request(request).body)["result"]
-end
-
-#################################
 #  アンロックする主体に渡す情報を代入文の文字列にしたもの
 # P2WSH でロックされたトランザクションのtxid
 locked_txid 
-
 # redeem script の16進数形式
 redeem_script_hex
-
-# テスト用の秘密鍵（WIF形式）
-priv_alice = "cTzEHTNYQQ2PGLJWFkXdpxHm3B8kuU7yN3c5b5ZkSWzUY6j3ZW5B"
-priv_bob   = "cUTymPpf51Y1Q8hddD93kSqVahkdFQJXWCuMgY8ctHJqbermrXPK"
-priv_carol = "cRaww9WmBUogesd6vEBBi4A24yZdxSMQT75FJ9ZQTqWtpRJSTG2f"
-priv_david = "cSHFCDprZSsp423BG8brHReK7FG4CNifJYZvgcZ6N6QchcxEgyDp"
-
-# 鍵オブジェクトの復元(WIF形式の秘密鍵から生成）
-keyAlice = Bitcoin::Key.from_wif(priv_alice)
-keyBob   = Bitcoin::Key.from_wif(priv_bob)
-keyCarol = Bitcoin::Key.from_wif(priv_carol)
-keyDavid = Bitcoin::Key.from_wif(priv_david)
-
-## アドレス
-alice = keyAlice.to_p2wpkh
-bob   = keyBob.to_p2wpkh
-carol = keyCarol.to_p2wpkh
-david = keyDavid.to_p2wpkh
-
-#####################################################
-
 # アンロックした資金は addr に送金するものとする
 # 二人の署名鍵によるアンロック（key1, key2)
-
 def unlock_p2wsh_tx(locked_txid, redeem_script_hex, addr, key1, key2)
     # redeem script の復元
     redeem_script = Bitcoin::Script.parse_from_payload(redeem_script_hex.htb)
@@ -251,10 +272,8 @@ def unlock_p2wsh_tx(locked_txid, redeem_script_hex, addr, key1, key2)
     p2wsh_txid = bitcoinRPC('sendrawtransaction', [p2wsh_tx.to_hex])
     return p2wsh_txid
 end
-
 # Alice と Bobの秘密鍵によるアンロック
 # アンロックした資金は Aliceのアドレスに送金する
-
 p2wsh_txid = unlock_p2wsh_tx(locked_txid, redeem_script_hex, alice, keyAlice, keyBob)
 ```
 
