--- a/bitcoin/1.bitcoin-core-basic.md
+++ b/bitcoin/1.bitcoin-core-basic.md
@@ -1,6 +1,6 @@
 # 1 Bitcoin Coreの基本
 
-2022/05/09更新 Shigeichiro Yamasaki
+2022/11/15更新 Shigeichiro Yamasaki
 
 ### bitcoin core のフルノード
 
@@ -223,28 +223,28 @@ bitcoin-core.cli getpeerinfo
 
 ### bitcoin-cliコマンドによるビットコインワレットの操作
 
-#### ワレットの作成
+### bitcoin のレガシーワレットの作成
 
-```
-createwallet <ワレット名>
-```
+最初に作成したとき
 
-```
-{                       (json object)
-  "name" : "str",       (string) The wallet name if created successfully. If the wallet was created using a full path, the wallet_name will be the full path.
-  "warning" : "str"     (string) Warning message if wallet was not loaded cleanly.
-}
+```bash
+bitcoin-core.cli -named createwallet wallet_name=alice descriptors=false
 ```
 
 ```bash
-# 実行例
-bitcoin-core.cli createwallet alice 
+bitcoin-core.cli -named createwallet wallet_name=bob descriptors=false
+```
+
+再起動後
 
 
-{
-  "name": "alice",
-  "warning": ""
-}
+```bash
+bitcoin-core.cli loadwallet ~/snap/bitcoin-core/common/.bitcoin/signet/alice
+```
+
+```bash 
+bitcoin-core.cli loadwallet ~/snap/bitcoin-core/common/.bitcoin/signet/bob
+```
 ```
 
 #### ワレットの一覧
