--- a/bitcoin/3.bitcoinrb.md
+++ b/bitcoin/3.bitcoinrb.md
@@ -698,18 +698,18 @@ end
 # トランザクションのoutputの構成
 def tx_outputs(tx,amount, addr, change, addr_change)
     # 送金用outputの構成
-        # 金額を satoshiの整数に変換
+    # 金額を satoshiの整数に変換
     amount_satoshi = (amount*(10**8)).to_i
-        # ビットコインアドレスから p2wpkhのscript_pubkey を生成
+    # ビットコインアドレスから p2wpkhのscript_pubkey を生成
     scriptPubKey0 = Bitcoin::Script.parse_from_addr(addr)
-        # エンコードしたscript_pubkeyをトランザクションのoutputに埋め込む
+    # エンコードしたscript_pubkeyをトランザクションのoutputに埋め込む
     tx.out << Bitcoin::TxOut.new(value: amount_satoshi , script_pubkey: scriptPubKey0)
     # おつり用outputの構成
-        # 金額を satoshiの整数に変換
+    # 金額を satoshiの整数に変換
     change_satoshi =  (change*(10**8)).to_i
-        # ビットコインアドレスから p2wpkhのscript_pubkey を生成
-    scriptPubKey1 = Bitcoin::Script.parse_from_addr(addr_change****)
-        # エンコードしたscript_pubkeyをトランザクションのoutputに埋め込む
+    # ビットコインアドレスから p2wpkhのscript_pubkey を生成
+    scriptPubKey1 = Bitcoin::Script.parse_from_addr(addr_change)
+    # エンコードしたscript_pubkeyをトランザクションのoutputに埋め込む
     tx.out << Bitcoin::TxOut.new(value: change_satoshi, script_pubkey: scriptPubKey1)
     return tx
 end
