--- a/bitcoin/3.bitcoinrb.md
+++ b/bitcoin/3.bitcoinrb.md
@@ -360,6 +360,18 @@ pub_david = keyDavid.pubkey
 
 ```
 
+#### 秘密鍵のワレットへのインポート
+
+それぞれ少し時間がかかります
+
+```ruby
+bitcoinRPC('importprivkey', [priv_alice])
+bitcoinRPC('importprivkey', [priv_bob])
+bitcoinRPC('importprivkey', [priv_carol])
+bitcoinRPC('importprivkey', [priv_david])
+```
+
+インポートが終わると，所持金が増えているはずです
 
 #### トランザクションのテンプレートの作成
 
