--- a/bitcoin/5.bitcoinrb-P2WSH.md
+++ b/bitcoin/5.bitcoinrb-P2WSH.md
@@ -1,6 +1,6 @@
 # 5. bitcoinrbでP2WSHを実装
 
-2022/11/10 更新 Shigeichiro Yamasaki
+2022/12/01 更新 Shigeichiro Yamasaki
 
 bitcoinでスマートコントラクトを記述するときの基本は P2WSH です
 
@@ -33,31 +33,8 @@ def bitcoinRPC(method, params)
     request.body = { method: method, params: params, id: 'jsonrpc' }.to_json
     JSON.parse(http.request(request).body)["result"]
 end
-# トランザクションのinputの構成
-def make_inputs(tx, utxos)
-    utxos.each{|utxo|
-        outpoint = Bitcoin::OutPoint.from_txid(utxo["txid"], utxo["vout"])
-        tx.in << Bitcoin::TxIn.new(out_point: outpoint)
-    }
-    return tx
-end
-# 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
-def consuming_utxos(amount)
-    # ワレットの未使用のUTXOの一覧を得る
-    unspent = bitcoinRPC('listunspent', [])
-    # 消費可能状態のUTXOの選定
-    spendable_utxos = unspent.select{|t|t["spendable"]==true}
-    # UTXOを金額で昇順にソートする
-    sorted_utxos = spendable_utxos.sort_by{|x|x["amount"]}
-    # 少額のUTXOから集めて，指定金額を上回るぎりぎりのUTXOのリストを作成する
-    utxos=[]
-    begin
-        utxos << sorted_utxos.shift
-        balance = utxos.reduce(0){|s,t|s+=t["amount"]}
-    end until balance >= amount
-    return utxos
-end
-#######################################################
+##################################
+######################################################
 # テスト用アカウントと鍵
 # テスト用の秘密鍵（WIF形式）
 priv_alice = "cTzEHTNYQQ2PGLJWFkXdpxHm3B8kuU7yN3c5b5ZkSWzUY6j3ZW5B"
@@ -79,57 +56,110 @@ pub_alice = keyAlice.pubkey
 pub_bob   = keyBob.pubkey
 pub_carol = keyCarol.pubkey
 pub_david = keyDavid.pubkey
+######################################
+
 ```
 
-### m of n マルチシグトランザクションのP2WSH送金 
+
+#### 秘密鍵のワレットへのインポート
+
+それぞれ少し時間がかかります
+
+```ruby
+bitcoinRPC('importprivkey', [priv_alice])
+bitcoinRPC('importprivkey', [priv_bob])
+bitcoinRPC('importprivkey', [priv_carol])
+bitcoinRPC('importprivkey', [priv_david])
+```
+
+### トランザクションの構成
 
 ```ruby
 ###  m of n マルチシグトランザクションのP2WSH送金 
 #    mはアンロックに必要な公開鍵の数
 #    amount は、P2WSH で送金する金額
 #    pubkeys は、n個の公開鍵の配列
-def send_multisig(amount, m, pubkeys)
-    # redeem scriptの生成
-    redeem_script = Bitcoin::Script.to_multisig_script(m,pubkeys)
-    # P2WSHトランザクションの構成
-    tx,utxos = p2wsh_tx(amount, redeem_script)
-    # トランザクションへの署名
-    tx_h = bitcoinRPC('signrawtransactionwithwallet',[tx.to_hex])
-    # トランザクションのデプロイ
-    txid = bitcoinRPC('sendrawtransaction',[tx_h["hex"]])
-    # P2WSHトランザクションのアンロックに必要な情報の出力
-    return tx, txid, redeem_script
-end
-# P2WSHトランザクションの構成
-def p2wsh_tx(amount, redeem_script)
+def send_multisig(amount, m, pubkeys, addr_change)
+    # 所持金残高を確認
     balance = bitcoinRPC('getbalance', [])
     if balance < (amount+FEE) then
         puts "error (残高不足)"
     else
-        tx = Bitcoin::Tx.new
-        # 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
-        utxos = consuming_utxos(amount+FEE)
-        # トランザクションのinputの構成
-        tx = make_inputs(tx,utxos)
-        # おつり = UTXOの総額 - 送金金額 - 手数料
-        change = (utxos.map{|utxo|utxo["amount"]}.sum)-amount-FEE
-        # おつり用アドレス（UTXOの０番目を受け取ったアドレスを利用する）
-        change_addr = utxos[0]["address"]       
-        # トランザクションのoutputの構成
-        tx = make_outputs(tx, amount, redeem_script, change, change_addr)
-        return tx,utxos
+        # redeem scriptの生成
+        redeem_script = Bitcoin::Script.to_multisig_script(m,pubkeys)
+        # P2WSHトランザクションの構成
+        tx = p2wsh_tx(amount, redeem_script, addr_change)
+        # トランザクションへの署名
+        tx_h = bitcoinRPC('signrawtransactionwithwallet',[tx.to_hex])
+        # トランザクションのデプロイ
+        txid = bitcoinRPC('sendrawtransaction',[tx_h["hex"]])
+        # P2WSHトランザクションのアンロックに必要な情報の出力
+        return tx, txid, redeem_script
     end
 end
+
+
+# P2WSHトランザクションの構成
+def p2wsh_tx(amount, redeem_script, addr_change)
+    # トランザクションのスケルトン
+    tx = Bitcoin::Tx.new
+    # 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
+    utxos = consuming_utxos(amount+FEE)
+    # トランザクションのinputの構成
+    tx = tx_inputs(tx,utxos)
+    # おつり = UTXOの総額 - 送金金額 - 手数料
+    change = (utxos.map{|utxo|utxo["amount"]}.sum)-amount-FEE
+    # トランザクションのoutputの構成
+    tx = tx_outputs(tx, amount, redeem_script, change, addr_change)
+    return tx
+end
+
+
+
+# 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
+def consuming_utxos(amount)
+    # ワレットの未使用のUTXOの一覧を得る
+    unspent = bitcoinRPC('listunspent', [])
+    # 消費可能状態のUTXOの選定
+    spendable_utxos = unspent.select{|t|t["spendable"]==true}
+    # UTXOを金額で昇順にソートする
+    sorted_utxos = spendable_utxos.sort_by{|x|x["amount"]}
+    # 少額のUTXOから集めて，指定金額を上回るぎりぎりのUTXOのリストを作成する
+    utxos=[]
+    begin
+        utxos << sorted_utxos.shift
+        balance = utxos.reduce(0){|s,t|s+=t["amount"]}
+    end until balance >= amount
+    return utxos
+end
+
+
+# トランザクションのinputの構成
+def tx_inputs(tx, utxos)
+    utxos.each{|utxo|
+        # UTXOをinputから参照するための txid と vout としてエンコードする
+        outpoint = Bitcoin::OutPoint.from_txid(utxo["txid"], utxo["vout"])
+        # エンコードした参照をトランザクションのinputに埋め込む
+        tx.in << Bitcoin::TxIn.new(out_point: outpoint)
+    }
+    return tx
+end
+
+
 # p2wshトランザクションのoutputの構成
-def make_outputs(tx, amount, redeem_script, change, change_addr)
+def tx_outputs(tx, amount, redeem_script, change, addr_change)
+    # satoshi変換
     change_satoshi = (change*(10**8)).to_i
     amount_satoshi = (amount*(10**8)).to_i
     # P2WSHアドレス
     p2wsh_addr = Bitcoin::Script.to_p2wsh(redeem_script).to_addr
+    #  P2WSHアドレスからscript pubkey を生成
     scriptPubKey0 = Bitcoin::Script.parse_from_addr(p2wsh_addr)
+    # 作成したscript pubkey outputに設定する
     tx.out << Bitcoin::TxOut.new(value: amount_satoshi, script_pubkey: scriptPubKey0)
-    # おつり用outputの構成(P2PKH)
-    scriptPubKey1 = Bitcoin::Script.parse_from_addr(change_addr)
+    # おつり用script pub key の構成(P2PKH)
+    scriptPubKey1 = Bitcoin::Script.parse_from_addr(addr_change)
+    # おつり用のoutput
     tx.out << Bitcoin::TxOut.new(value: change_satoshi, script_pubkey: scriptPubKey1)
     return tx
 end
@@ -139,11 +169,13 @@ end
 
 ```ruby
 # 送金金額、署名閾値、公開鍵リスト
-amount = 0.001
+amount = 0.0001
 m = 2
 pubkeys = [pub_alice, pub_bob, pub_carol]
 # 送金
-tx, locked_txid, redeem_script = send_multisig(amount,m,pubkeys)
+tx, locked_txid, redeem_script = send_multisig(amount,m,pubkeys, bob)
+
+
 ################################
 # アンロックする主体に渡す情報を代入文の文字列にする
 # P2WSH でロックされたトランザクションのtxid
@@ -247,7 +279,9 @@ def unlock_p2wsh_tx(locked_txid, redeem_script_hex, addr, key1, key2)
     redeem_script = Bitcoin::Script.parse_from_payload(redeem_script_hex.htb)
     # アンロック対象トランザクションとUTXOを確定する
     locked_tx = Bitcoin::Tx.parse_from_payload(bitcoinRPC('getrawtransaction',[locked_txid]).htb)
+    # ロックされているUTXO
     p2wsh_utxo = locked_tx.out
+    # 0がP2WSHであることがわかっている
     utxo_vout = 0
     utxo_value = p2wsh_utxo[utxo_vout].value    # この金額の単位は satoshi
     # アンロックトランザクションの構成（送金先はaliceとする）
