--- a/bitcoin/7.bitcoin-HTLC.md
+++ b/bitcoin/7.bitcoin-HTLC.md
@@ -1,6 +1,6 @@
 # 7. HTLCの作成
 
-2022/08/13 更新　Shigeichiro Yamasaki
+2022/12/20更新　Shigeichiro Yamasaki
 
 ## Alice からBobに送金する
 
@@ -66,12 +66,14 @@ OP_CHECKSIG
 require 'bitcoin'
 require 'net/http'
 require 'json'
+include Bitcoin
 include Bitcoin::Opcodes
 Bitcoin.chain_params = :signet
 HOST="localhost"
 PORT=38332          # mainnetの場合は 8332
 RPCUSER="hoge"      # bitcoin core RPCユーザ名
 RPCPASSWORD="hoge"  # bitcoin core パスワード
+FEE = 0.00002       # 手数料
 # bitcoin core RPC を利用するメソッド
 def bitcoinRPC(method, params)
     http = Net::HTTP.new(HOST, PORT)
@@ -81,29 +83,31 @@ def bitcoinRPC(method, params)
     request.body = { method: method, params: params, id: 'jsonrpc' }.to_json
     JSON.parse(http.request(request).body)["result"]
 end
-# Aliceのアドレス
-addrAlice = bitcoinRPC("getnewaddress", [])
-# Aliceの秘密鍵
-privAlice = bitcoinRPC("dumpprivkey", [addrAlice])
-# Aliceの鍵オブジェクト(WIF形式の秘密鍵から生成）
-keyAlice = Bitcoin::Key.from_wif(privAlice)
-# Aliceの公開鍵
-pubkeyAlice = keyAlice.pubkey
-# Aliceはデポジットする資金を持っている
-bitcoinRPC('sendtoaddress',[addrAlice, 0.0001])
-bitcoinRPC('sendtoaddress',[addrAlice, 0.0002])
-bitcoinRPC('sendtoaddress',[addrAlice, 0.0003])
-bitcoinRPC('sendtoaddress',[addrAlice, 0.0004])
+#######################################################
+# テスト用アカウントと鍵
+# テスト用の秘密鍵（WIF形式）
+priv_alice = "cTzEHTNYQQ2PGLJWFkXdpxHm3B8kuU7yN3c5b5ZkSWzUY6j3ZW5B"
+priv_bob   = "cUTymPpf51Y1Q8hddD93kSqVahkdFQJXWCuMgY8ctHJqbermrXPK"
+priv_carol = "cRaww9WmBUogesd6vEBBi4A24yZdxSMQT75FJ9ZQTqWtpRJSTG2f"
+priv_david = "cSHFCDprZSsp423BG8brHReK7FG4CNifJYZvgcZ6N6QchcxEgyDp"
+# 鍵オブジェクトの復元(WIF形式の秘密鍵から生成）
+keyAlice = Bitcoin::Key.from_wif(priv_alice)
+keyBob   = Bitcoin::Key.from_wif(priv_bob)
+keyCarol = Bitcoin::Key.from_wif(priv_carol)
+keyDavid = Bitcoin::Key.from_wif(priv_david)
+## アドレス
+alice = keyAlice.to_p2wpkh
+bob   = keyBob.to_p2wpkh
+carol = keyCarol.to_p2wpkh
+david = keyDavid.to_p2wpkh
+# 公開鍵
+pub_alice = keyAlice.pubkey
+pub_bob   = keyBob.pubkey
+pub_carol = keyCarol.pubkey
+pub_david = keyDavid.pubkey
+# Bitcoin送金メソッド
+# 送金先アドレス、送金金額，おつりアドレス
 
-# --- Bob側マシンでの準備 ----
-# Bobのアドレス
-addrBob = bitcoinRPC("getnewaddress", [])
-# Bobの秘密鍵
-privBob = bitcoinRPC("dumpprivkey", [addrBob])
-# Bobの鍵オブジェクト(WIF形式の秘密鍵から生成）
-keyBob = Bitcoin::Key.from_wif(privBob)
-# Bobの公開鍵
-pubkeyBob = keyBob.pubkey
 
 ```
 
@@ -121,7 +125,8 @@ secret_hash=Bitcoin.sha256(secret)
 
 ```ruby
 # scriptのテスト
-script = Bitcoin::Script.new << secret.bth << OP_SHA256 << secret_hash << OP_EQUAL
+script = Bitcoin::Script.new << secret.bth << OP_SHA256 << secret_hash.bth << OP_EQUAL
+
 script.run
 # => true
 ```
@@ -130,25 +135,109 @@ script.run
 
 
 ```ruby
+# tx_type: トランザクションのタイプ 'htlc_lock' | 'p2wpkh'
+# addr 受領者のアドレス
+# amount 送金金額
+# addr_change お釣りを受け取りてのアドレス
 # secret_hash 秘密情報のハッシュ値
-# pubkeySND 送金者の公開鍵
-# addrSND 送金者のアドレス
-# pubkeyRSV 受領者の公開鍵
-# lockDays　ロックする日数
-def send_HTLC_lock_tx(secret_hash, pubkeySND, addrSND, pubkeyRSV, deposit, fee, lockDays)
+# pub_sender 送金者の公開鍵
+# addr_sender 送金者のアドレス
+# pub_receiver 受領者の公開鍵
+# lock_days　ロックする日数
+
+def send_bitcoin(tx_type, addr, amount, addr_change, secret_hash, pub_sender, addr_sender, pub_receiver, lock_days)
+    # 所持金残高を確認
+    balance = bitcoinRPC('getbalance', [])
+    if balance < (amount+FEE) then
+        puts "error (残高不足)"
+    else
+        # 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
+        utxos = consuming_utxos(amount+FEE)
+        # 送金に使用するUTXOの総額
+        fund = utxos.map{|utxo|utxo["amount"]}.sum
+        # UTXOの総額 - 送金金額 - 手数料 = おつり
+        change = fund-amount-FEE
+        case tx_type
+        when 'p2wpkh' then
+            # トランザクションの構成（P2WPKH)
+            tx = p2wpkh_transaction(addr, amount, utxos, change, addr_change)
+        when 'htlc_lock' then
+            # トランザクションの構成（P2WPKH)
+            tx = htlc_lock_tx(utxos, secret_hash, pub_sender, addr_sender, pub_receiver, deposit, lock_days)        
+        end
+        # トランザクションへの署名
+        tx = sign_inputs(utxos, tx)
+        # ビットコインネットワークへのデプロイ
+        return bitcoinRPC('sendrawtransaction', [tx.to_hex])
+    end
+end
+
+# 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
+def consuming_utxos(amount)
+    # ワレットの未使用のUTXOの一覧を得る
+    unspent = bitcoinRPC('listunspent', [])
+    # 消費可能状態のUTXOの選定
+    spendable_utxos = unspent.select{|t|t["spendable"]==true}
+    # UTXOを金額で昇順にソートする
+    sorted_utxos = spendable_utxos.sort_by{|x|x["amount"]}
+    # 少額のUTXOから集めて，指定金額を上回るぎりぎりのUTXOのリストを作成する
+    utxos=[]
+    begin
+        utxos << sorted_utxos.shift
+        balance = utxos.reduce(0){|s,t|s+=t["amount"]}
+    end until balance >= amount
+    return utxos
+end
+
+def htlc_lock_tx(utxos, secret_hash, pub_sender, addr_sender, pub_receiver, deposit,  lock_days)
+
+        # 送金金額＋手数料をぎりぎり上回るUTXOリストの作成とその総額
+        utxos = consuming_utxos(deposit + fee)
+        balance = utxos.map {|tx|tx[ "amount"]}.sum
+        # HTLC のredeem scriptの生成
+        redeem_script = redeem_script_HTLC(pub_sender, pub_receiver, secret_hash, lock_days)
+        # HTLCロックトランザクションの scriptPubKey
+        scriptPubKey_p2wsh = Bitcoin::Script.from_string("0 #{redeem_script.to_sha256}")
+        # P2WSH アドレスの生成   
+        p2wshaddr = scriptPubKey_p2wsh.to_addr
+        # お釣り
+        change= balance-deposit-fee
+        # それぞれの金額をSatoshiに変換
+        deposit_satoshi = (deposit * (10**8)).to_i
+        change_satoshi = (change * (10**8)).to_i
+        # トランザクションテンプレートの生成
+        tx = Bitcoin::Tx.new
+        # inputの作成
+        tx = make_inputs(tx, utxos)
+        # デポジット用 P2WSH outputの作成
+        tx.out << Bitcoin::TxOut.new(value: deposit_satoshi, script_pubkey:  Bitcoin::Script.parse_from_addr(p2wshaddr))
+        # おつり用のP2WPKH outputの作成
+        tx.out << Bitcoin::TxOut.new(value: change_satoshi , script_pubkey:  Bitcoin::Script.parse_from_addr(addr_sender))
+        return [tx, redeem_script.to_h[:asm], p2wshaddr]
+    end
+end
+
+
+
+
+
+
+####################################
+
+def send_HTLC_lock_tx(secret_hash, pub_sender, addr_sender, pub_receiver, deposit, fee, lock_days)
     # 未署名のHTLC Lock トランザクションの生成
-    unsigned_HTCL_lock_tx, redeem_script, p2wshaddr  = unsigned_HTCL_lock_transaction(secret_hash, pubkeySND, addrSND, pubkeyRSV, deposit, fee, lockDays)
+    unsigned_HTCL_lock_tx, redeem_script, p2wshaddr  = unsigned_HTCL_lock_transaction(secret_hash, pub_sender, addr_sender, pub_receiver, deposit, fee, lock_days)
     # HTLC Lock トランザクションへの署名
     signed_HTCL_lock_tx = bitcoinRPC('signrawtransactionwithwallet',[unsigned_HTCL_lock_tx.to_hex])
     htlc_lock_txid = bitcoinRPC('sendrawtransaction',[signed_HTCL_lock_tx["hex"]])
     return [htlc_lock_txid, redeem_script, p2wshaddr]
 end
 # HTLC redeem script作成メソッド
-def redeem_script_HTLC(pubkeySND, pubkeyRSV, secret_hash, lockDays)
+def redeem_script_HTLC(pub_sender, pub_receiver, secret_hash, lock_days)
     # <ロックするブロック数> 10日間のブロック数（リトルエンディアン）
-    locktime = (6*24*lockDays).to_bn.to_s(2).reverse.bth
+    locktime = (6*24*lock_days).to_bn.to_s(2).reverse.bth
     # redeem script
-    redeem_script = Bitcoin::Script.new << OP_IF << OP_SHA256 << secret_hash << OP_EQUALVERIFY << pubkeyRSV << OP_ELSE << locktime << OP_CSV << OP_DROP << pubkeySND << OP_ENDIF << OP_CHECKSIG
+    redeem_script = Bitcoin::Script.new << OP_IF << OP_SHA256 << secret_hash << OP_EQUALVERIFY << pub_receiver << OP_ELSE << locktime << OP_CSV << OP_DROP << pub_sender << OP_ENDIF << OP_CHECKSIG
     # redeem scriptの内容の確認
     return redeem_script
 end
@@ -170,7 +259,7 @@ def consuming_utxos(amount)
     return utxos
 end
 #未署名のHTLC Lock トランザクションの生成
-def unsigned_HTCL_lock_transaction(secret_hash, pubkeySND, addrSND, pubkeyRSV, deposit, fee, lockDays)
+def unsigned_HTCL_lock_transaction(secret_hash, pub_sender, addr_sender, pub_receiver, deposit, fee, lock_days)
     if bitcoinRPC('getbalance',[]) < (deposit+fee) then
         puts "you don't have enough funds for deposit"
     else
@@ -178,7 +267,7 @@ def unsigned_HTCL_lock_transaction(secret_hash, pubkeySND, addrSND, pubkeyRSV, d
         utxos = consuming_utxos(deposit + fee)
         balance = utxos.map {|tx|tx[ "amount"]}.sum
         # HTLC のredeem scriptの生成
-        redeem_script = redeem_script_HTLC(pubkeySND, pubkeyRSV, secret_hash, lockDays)
+        redeem_script = redeem_script_HTLC(pub_sender, pub_receiver, secret_hash, lock_days)
         # HTLCロックトランザクションの scriptPubKey
         scriptPubKey_p2wsh = Bitcoin::Script.from_string("0 #{redeem_script.to_sha256}")
         # P2WSH アドレスの生成   
@@ -195,7 +284,7 @@ def unsigned_HTCL_lock_transaction(secret_hash, pubkeySND, addrSND, pubkeyRSV, d
         # デポジット用 P2WSH outputの作成
         tx.out << Bitcoin::TxOut.new(value: deposit_satoshi, script_pubkey:  Bitcoin::Script.parse_from_addr(p2wshaddr))
         # おつり用のP2WPKH outputの作成
-        tx.out << Bitcoin::TxOut.new(value: change_satoshi , script_pubkey:  Bitcoin::Script.parse_from_addr(addrSND))
+        tx.out << Bitcoin::TxOut.new(value: change_satoshi , script_pubkey:  Bitcoin::Script.parse_from_addr(addr_sender))
         return [tx, redeem_script.to_h[:asm], p2wshaddr]
     end
 end
@@ -231,6 +320,7 @@ HOST="localhost"
 PORT=38332          # mainnetの場合は 8332
 RPCUSER="hoge"      # bitcoin core RPCユーザ名
 RPCPASSWORD="hoge"  # bitcoin core パスワード
+FEE = 0.00002       # 手数料
 
 # bitcoin core RPC を利用するメソッド
 def bitcoinRPC(method, params)
@@ -284,7 +374,7 @@ def htlc_unlock_tx(htlc_lock_txid, secret, redeem_script_htlc , addrRSV, keyRSV,
     return tx
 end
 # 実行
-tx = htlc_unlock_tx(htlc_lock_txid, secret, redeem_script_htlc, addrBob, keyBob, 0.00002)
+tx = htlc_unlock_tx(htlc_lock_txid, secret, redeem_script_htlc, bob, keyBob, 0.00002)
 ```
 
 ### unlocking script の確認
