--- a/ethereum/1. ethereum-testnet.md
+++ b/ethereum/1. ethereum-testnet.md
@@ -67,7 +67,7 @@ sudo snap install nebula-lighthouse-service
 ローカルの Geth インスタンスへの RPC 接続を確立するには　localhost:8551　で接続する
 
 ```bash
-geth --authrpc.addr localhost --authrpc.port 8551 --authrpc.vhosts localhost --authrpc.jwtsecret /tmp/jwtsecret
+geth --goerli --authrpc.addr localhost --authrpc.port 8551 --authrpc.vhosts localhost --authrpc.jwtsecret /tmp/jwtsecret
 ```
 
 ### TTD (Terminal Total Difficulty)
@@ -106,7 +106,6 @@ Homebrew がインストールされている前提です
 [Homebrew インストール](https://brew.sh/index_ja)
 
 ```bash
-brew install build-essential
 brew install git curl wget node
 
 brew tap ethereum/ethereum
