--- a/ethereum/1. ethereum-testnet.md
+++ b/ethereum/1. ethereum-testnet.md
@@ -1,6 +1,6 @@
 # 1. Ethereum testnetノード構築
 
-2022/11/04 更新 Shigeichiro Yamasaki
+2023/01/05 更新 Shigeichiro Yamasaki
 
 ## Ethereum ノードの基本構成
 
@@ -23,10 +23,9 @@ Ethereumのメインネットは、PoWからPoSに移行しました。
 
 * Ethereumクライアントには、実行クライアントとコンセンサスクライアントがあります。
 * gethは実行クライアントです。
-* gethを利用するためには、コンセンサスクライアントと接続する必要があります。
-* Geth はコンセンサス クライアントに接続するために、クライアント間 RPC 接続用のポートを公開する必要があります
-* このRPC接続には、jwtsecretファイルを使った認証が必要で、このファイルは gethとコンセンサスクライアントの双方に必要です
-* この認証は、　`<datadir>`/geth/jwtsecret　が使用されます
+* gethをEthereum ノードとして稼働させるためにはコンセンサスクライアントとの接続が必要です
+* JSON-RPC ポート8545への外部トラフィックをブロックするように構成されていることを前提としています
+
 
 ### Ethrerumテストネットワークの種類
 
@@ -42,56 +41,25 @@ The merge 以降，Gethだけでは Ethereumノードはチェーンを検証で
 * Teku: Java実装
 * Lodestar : Typescript 実装
 
-#### コンセンサスクライアントとGethの関係
-
-2 つのクライアントは、それぞれ独自のピアツーピア (P2P) ネットワークに接続します。
-
-![](https://geth.ethereum.org/static/images/client-architecture.png)
-
-#### Lighthouseのインストール
-
-MacOSX
-
-```bash
-brew install lighthouse
-```
-
-ubuntu
-
-```
-sudo apt update
-sudo apt install snapd
-sudo snap install nebula-lighthouse-service
-```
-
-ローカルの Geth インスタンスへの RPC 接続を確立するには　localhost:8551　で接続する
-
-```bash
-geth --goerli --authrpc.addr localhost --authrpc.port 8551 --authrpc.vhosts localhost --authrpc.jwtsecret /tmp/jwtsecret
-```
-
-### TTD (Terminal Total Difficulty)
-
-The Merge によってブロックチェーンをPoSにフォークするときの閾値になるディフィカルティのこと
-
-Ropstenネットワークでは、block 12350712 は PoW ですが、
-block 12350712は PoSになっています
-
-![](https://i.stack.imgur.com/vPFrC.png)
-![](https://i.stack.imgur.com/H0cmO.png)
-
 ## ethereum (Geth) インストール手順
+
+### MacOSX
+
+```bash
+brew tap ethereum/ethereum
+brew install ethereum
+```
+
+###  geth の開発ツール
+
+clef、devp2p、abigen、bootnode、evm、rlpdump 、puppeth
+
+これらのツールは，gethのインストールによってインストールされます
+
+
 
 ### ubuntu 20.04 LTS
 
-```bash
-sudo apt update
-sudo apt upgrade -y
-sudo apt install -y snap snapd
-sudo apt install build-essential
-sudo apt install git curl wget
-sudo snap install node --classic --channel=14
-```
 
 ```bash
 sudo add-apt-repository -y ppa:ethereum/ethereum
@@ -99,18 +67,26 @@ sudo apt-get update
 sudo apt-get install ethereum
 ```
 
-### MacOSX
+##  コンセンサスクライアントとの接続
 
-Homebrew がインストールされている前提です
+コンセンサス クライアントに接続するために、Geth はクライアント間 RPC 接続用のポートを公開する必要があります
 
-[Homebrew インストール](https://brew.sh/index_ja)
+### jwtsecretファイル
+
+* コンセンサスクライアントとのRPC接続には認証が必要です
+* `--authrpc.jwtsecret` の引数にパスに渡すと自動生成してくれます
+
+### アドレスとポート番号
+
+アドレスを `--authrpc.addr` に、ポート番号を `--authrpc.port` に渡す
+
+`--authrpc.vhosts` にlocalhost を設定すると，仮想ホストからの着信要求が Geth によって受け入れられるようになります
 
 ```bash
-brew install git curl wget node
-
-brew tap ethereum/ethereum
-brew install geth
+geth --authrpc.addr localhost --authrpc.port 8551 --authrpc.vhosts localhost --authrpc.jwtsecret /tmp/jwtsecret
 ```
+
+
 
 ## Rinkebyネットワークへの接続
 
